# ILSS-DisabilityIN-Demo-2026

./: .gitignore  vercel.json
firmware/: .gitignore  AZURE_IOT_COMMANDS copy.md  AZURE_IOT_COMMANDS.md  CMakeLists.txt  README.md  Specification.md  USB Provisioning Protocol.md  partitions.csv  provision_device.sh  sdkconfig  sdkconfig.defaults
firmware/docs/: BLE_GATT.md  BUTTON_BRINGUP_HANDOFF.md  LAYERING.md  PACKET_PROTOCOL.md  PAIRING.md  PROVISIONING.md  STATE_MACHINE.md
firmware/main/: CMakeLists.txt  Kconfig.azure  Kconfig.debug  Kconfig.logging  Kconfig.preferences  Kconfig.projbuild  Kconfig.twin  idf_component.yml
firmware/src/: main.cpp
firmware/src/application/: Hardware.h
firmware/src/application/BootSequence/: BootSequence.cpp  BootSequence.h
firmware/src/application/ButtonBringupTest/: ButtonBringupTest.cpp  ButtonBringupTest.h
firmware/src/application/DigitalTwinApplication/: DigitalTwinApplication.cpp  DigitalTwinApplication.h
firmware/src/application/FeatureTestApplication/: FeatureTestApplication.cpp  FeatureTestApplication.h
firmware/src/application/ILSSLanyardApplication/: ILSSLanyardApplication.cpp  ILSSLanyardApplication.h  WiFiLanyardApplication.cpp  WiFiLanyardApplication.h
firmware/src/application/IndicationController/: IndicationController.cpp  IndicationController.h
firmware/src/constants/: Constants.h
firmware/src/features/azure-iot/: AzureIoT.cpp  AzureIoT.h
firmware/src/features/ble-twin/: BleCrypto.cpp  BleCrypto.h  BleHeartbeat.cpp  BleHeartbeat.h  BleTwin.cpp  BleTwin.h
firmware/src/features/bluetooth/: Bluetooth.cpp  Bluetooth.h
firmware/src/features/buzzer/: Buzzer.cpp  Buzzer.h  BuzzerSpeech.cpp
firmware/src/features/crypto/: Crypto.cpp  Crypto.h
firmware/src/features/haptics/: Haptics.cpp  Haptics.h
firmware/src/features/rgb-led/: RGBLED.cpp  RGBLED.h
firmware/src/features/side-buttons/: SideButtons.cpp  SideButtons.h
firmware/src/features/usb/: USBCLI.cpp  USBCLI.h  USBProtocol.cpp  USBProtocol.h
firmware/src/layers/ble-beacon/: BLEBeacon.cpp  BLEBeacon.h
firmware/src/lowlevel/: LowLevel.cpp  LowLevel.h
firmware/src/lowlevel/bluetooth/: BluetoothLowLevelDriver.cpp  BluetoothLowLevelDriver.h
firmware/src/lowlevel/buzzer/: BuzzerLowLevelDriver.cpp  BuzzerLowLevelDriver.h
firmware/src/lowlevel/crypto/: ATECC608BDriver.cpp  ATECC608BDriver.h
firmware/src/lowlevel/haptics/: DRV2605Driver.cpp  DRV2605Driver.h
firmware/src/lowlevel/i2c/: I2CLowLevelDriver.cpp  I2CLowLevelDriver.h
firmware/src/lowlevel/network/: NetworkClient.cpp  NetworkClient.h
firmware/src/lowlevel/nvs/: NVSLowLevelDriver.cpp  NVSLowLevelDriver.h
firmware/src/lowlevel/usb/: UsbLowLevelDriver.cpp  UsbLowLevelDriver.h
firmware/src/lowlevel/wifi/: WiFiLowLevelDriver.cpp  WiFiLowLevelDriver.h
firmware/src/protocol/: PacketCodec.cpp  PacketCodec.h  TwinState.h
firmware/src/speech/: FIRE_ALARM.raw  OCCUPANT_ALERT.raw  SpeechData.h
firmware/src/state/: State.cpp  State.h
firmware/src/utils/: JSON.cpp  JSON.h  Logger.cpp  Logger.h  Utils.cpp  Utils.h
firmware/tools/: provision-lanyard.sh  provision_lanyard.py
firmware/tools/provision-lanyard/: go.mod  main.go
frontend/: .env.example  .thumbnail  README.md  app.js  audio.js  ble.js  index.html  lanyard.js  package-lock.json  package.json  styles.css  vite.config.ts
frontend/_ds/forge-common-ui-library-a68de1eb-0d1a-4330-b96f-9932154b0b27/: _ds_manifest.json
frontend/public/_ds/forge-common-ui-library-a68de1eb-0d1a-4330-b96f-9932154b0b27/: README.md  _adherence.oxlintrc.json  _ds_bundle.css  _ds_bundle.js
frontend/scripts/: verify-visual.mjs
frontend/src/: App.tsx  bootstrap.ts  main.tsx  vite-env.d.ts
frontend/src/components/: ErrorBoundary.tsx
frontend/src/context/: AppContext.tsx  BleTwinContext.tsx
frontend/src/ds/: forge.ts
frontend/src/hooks/: useAudioOutput.ts  useBleConnect.ts  useBottomSheet.ts  useDeviceHaptics.ts  useFeatureFlags.ts  useIsMobile.ts  useLanyardScale.ts  useSimulatorState.ts
frontend/src/lib/: storage.ts
frontend/src/pages/: LanyardSimulatorPage.tsx
frontend/src/styles/: alert-banner.css  app-menu-bar.css  app-shell.css  ble.css  device-logs.css  error-boundary.css  experiments.css  index.css  lanyard.css  mobile-sheet.css  panels.css
frontend/src/types/: bluetooth.d.ts  forge.d.ts  simulator.ts
pcb/ILSS_PCB_2026_DEMO/: ILSS_PCB_2026_DEMO.csv  ILSS_PCB_2026_DEMO.kicad_pcb  ILSS_PCB_2026_DEMO.kicad_prl  ILSS_PCB_2026_DEMO.kicad_pro  ILSS_PCB_2026_DEMO.kicad_sch  fp-lib-table  sym-lib-table
pcb/ILSS_PCB_2026_DEMO/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
(+69 files in other folders)
