# ESP-IDF Component Registration — digital twin build
idf_component_register(
    SRCS
        "../src/main.cpp"
        "../src/lowlevel/LowLevel.cpp"
        "../src/lowlevel/usb/UsbLowLevelDriver.cpp"
        "../src/lowlevel/i2c/I2CLowLevelDriver.cpp"
        "../src/lowlevel/bluetooth/BluetoothLowLevelDriver.cpp"
        "../src/lowlevel/buzzer/BuzzerLowLevelDriver.cpp"
        "../src/lowlevel/nvs/NVSLowLevelDriver.cpp"
        "../src/lowlevel/haptics/DRV2605Driver.cpp"
        "../src/features/buzzer/Buzzer.cpp"
        "../src/features/side-buttons/SideButtons.cpp"
        "../src/features/rgb-led/RGBLED.cpp"
        "../src/features/ble-twin/BleTwin.cpp"
        "../src/features/usb/USBCLI.cpp"
        "../src/protocol/PacketCodec.cpp"
        "../src/utils/Logger.cpp"
        "../src/utils/JSON.cpp"
        "../src/utils/Utils.cpp"
        "../src/state/State.cpp"
        "../src/application/DigitalTwinApplication/DigitalTwinApplication.cpp"
        "../src/application/IndicationController/IndicationController.cpp"
    INCLUDE_DIRS
        ".."
        "../src"
        "../src/lowlevel"
        "../src/lowlevel/usb"
        "../src/lowlevel/i2c"
        "../src/lowlevel/bluetooth"
        "../src/lowlevel/buzzer"
        "../src/lowlevel/haptics"
        "../src/lowlevel/nvs"
        "../src/features/buzzer"
        "../src/features/side-buttons"
        "../src/features/rgb-led"
        "../src/features/ble-twin"
        "../src/features/usb"
        "../src/protocol"
        "../src/utils"
        "../src/constants"
        "../src/state"
        "../src/application"
        "../src/application/DigitalTwinApplication"
        "../src/application/IndicationController"
        "../src/speech"
        "../src/layers/ble-beacon"
    REQUIRES
        led_strip
        button
        esp_driver_i2c
        esp_driver_gpio
        esp_driver_ledc
        esp_driver_usb_serial_jtag
        esp_timer
        bt
        nvs_flash
        json
        mbedtls
        app_update
)
